correction de la pagination dans les filtres