@@ -7,6 +7,7 @@ import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
@@ -50,11 +51,14 @@ public class EpisodeService {
 		return rep.findAll(p);
 	}
 	
-	public List<Episode> showByLangue(Long id, Pageable p){
+	public Page<Episode> showByLangue(Long id, Pageable p){
 		
-		return rep.findAll().stream()
-                     .filter(f -> f.getLangue().contains(id))
-                     .collect(Collectors.toList());
+		PageImpl<Episode> res = new PageImpl<Episode>(rep.findAll().stream()
+				   .filter(f -> f.getLangue().contains(id)).toList() 
+				   , p
+				   , rep.findAll().size());
+			
+			return res;
 	};
 	
 	public List<Episode> showBySerie(Long id, Pageable p){
